SONARHTML-324 Fix multiple sq issues (#445)